[package]
name = "rust-botnet"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rayon = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
pnet = "0.34.0"
faker_rand = "0.1.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3